After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 692010 - curltlssink: incorrect ssl level
curltlssink: incorrect ssl level
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.0.5
Other Linux
: Normal normal
: 1.0.6
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-01-18 14:03 UTC by Patricia Muscalu
Modified: 2013-01-22 12:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
set correct level of ssl for the transfer (952 bytes, patch)
2013-01-18 14:03 UTC, Patricia Muscalu
committed Details | Review

Description Patricia Muscalu 2013-01-18 14:03:39 UTC
Created attachment 233751 [details] [review]
set correct level of ssl for the transfer

Make sure that SSL is used for all communication.
Comment 1 Tim-Philipp Müller 2013-01-22 12:22:15 UTC
Pushed, thanks!

 commit 4202eeff7d4f424ee756918fbb9fadf3ce78d5b7
 Author: Patricia Muscalu <patricia@axis.com>
 Date:   Fri Jan 18 14:55:40 2013 +0100

    curltlssink: set correct level of SSL for the transfer
    
    https://bugzilla.gnome.org/show_bug.cgi?id=692010