curltlssink: set correct level of SSL for the transfer

https://bugzilla.gnome.org/show_bug.cgi?id=692010